k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crm
  labels:
    app: crm-api
